# mcp-serotonin

./: .gitignore  .mcp.json.example  LICENSE  README.md  bridge.lua  crash_blacklist.json  pyproject.toml  requirements.txt  server.py
