[project]
name = "mcp-serotonin"
version = "0.1.0"
description = "MCP server bridging LLM clients to the Serotonin Lua runtime for Roblox"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "aiohttp>=3.9",
]

[project.scripts]
mcp-serotonin = "server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
